[package]
name = "kilo"
version = "0.1.0"
edition = "2021"
authors = ["Kei-K23 <arkar.dev.kei@gmail.com>"]
description = "Kilo is a small, fast utility crate/library for manipulating strings and generating sourcemaps with all in Magic 🪄"
keywords = ["kilo", "string_manipulating", "parser", 'sourcemaps', "magic_string"]
license = "MIT"
readme = "README.md"
categories = ["parsing", "text-processing", "parser-implementations", "accessibility"]
homepage = "https://github.com/Kei-K23/kilo"
repository = "https://github.com/Kei-K23/kilo"

[dependencies]
